--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
   "devDependencies": {
     "eslint": "^4.19.1",
     "eslint-config-airbnb-base": "^12.1.0",
-    "eslint-plugin-import": "^2.12.0"
+    "eslint-plugin-html": "^4.0.3",
+    "eslint-plugin-import": "^2.12.0",
+    "node-sass": "^4.9.0",
+    "nodemon": "^1.17.5"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build-scss": "node-sass ./interestingUI/index.scss ./interestingUI/index.css",
+    "watch-scss": "nodemon -e scss -x \"npm run build-scss\""
   },
   "repository": {
     "type": "git",
