继续添加arrayTips和arrayPolyfill

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,7 @@
       "noFallthroughCasesInSwitch": true,
       "removeComments": true,
       "suppressImplicitAnyIndexErrors": true,
+      "downlevelIteration": true,
       "lib": [ "es6", "dom" ]
   },
   "exclude": [
