--- a/package.json
+++ b/package.json
@@ -7,12 +7,9 @@
     "ts-node": "^6.0.5"
   },
   "devDependencies": {
-    "eslint": "^4.19.1",
-    "eslint-config-airbnb-base": "^12.1.0",
-    "eslint-plugin-html": "^4.0.3",
-    "eslint-plugin-import": "^2.12.0",
     "node-sass": "^4.9.0",
-    "nodemon": "^1.17.5"
+    "nodemon": "^1.17.5",
+    "tslint-config-prettier": "^1.13.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
