--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,25 +1,23 @@
 {
   "compilerOptions": {
-      "target": "es5",
-      "outDir": "dist",
-      "module": "commonjs",
-      "moduleResolution": "node",
-      "skipDefaultLibCheck": true,
-      "sourceMap": true,
-      "declaration": true,
-      "noUnusedLocals": true,
-      "noUnusedParameters": false,
-      "noFallthroughCasesInSwitch": true,
-      "removeComments": true,
-      "suppressImplicitAnyIndexErrors": true,
-      "downlevelIteration": true,
-      "noImplicitReturns": true,
-      "noImplicitThis": true,
-      "noImplicitAny": true,
-      "strictNullChecks": true,
-      "lib": [ "es7", "dom" ]
+    "target": "es5",
+    "outDir": "dist",
+    "module": "commonjs",
+    "moduleResolution": "node",
+    "skipDefaultLibCheck": true,
+    "sourceMap": true,
+    "declaration": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": false,
+    "noFallthroughCasesInSwitch": true,
+    "removeComments": true,
+    "suppressImplicitAnyIndexErrors": true,
+    "downlevelIteration": true,
+    "noImplicitReturns": true,
+    "noImplicitThis": true,
+    "noImplicitAny": true,
+    "strictNullChecks": true,
+    "lib": ["es7", "dom"]
   },
-  "exclude": [
-      "node_modules"
-  ]
+  "exclude": ["node_modules"]
 }
